--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 
+sudo: true
+dist: trusty
+
 language: java
  
- 
+
  before_script: 
  -wget http://chromedriver.storage.googleapis.com/2.6/chromedriver_linux64.zip
  -unzip chromedriver_linux64.zip -d/home/travis/virtualenv/python2.7.12/bin/
