--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 
-sudo: true
-dist: trusty
-
+dist:xenial
 language: java
  
+addons: 
+chrome : stable
 
  before_script: 
  -wget http://chromedriver.storage.googleapis.com/2.6/chromedriver_linux64.zip
  -unzip chromedriver_linux64.zip -d/home/travis/virtualenv/python2.7.12/bin/
- -export CHROME_BIN=chromium-browser
+ -export CHROME_BIN=/usr/bin/chromium-browser
  
 script: mvn test
