--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,16 @@
+sudo: required
+
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+
+
 
 language: java
  
-addons: 
-chrome : stable
+os: windows
  
 script: mvn test
