--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,20 @@ addons:
     packages:
       - google-chrome-stable
 
-
-
 language: java
  
-os: windows
+before_install:
+ - sudo apt-get update
+ - sudo apt-get install chromium-chromedriver
  
+echo &PATH
+ 
+before_script:
+  - wget http://chromedriver.storage.googleapis.com/2.6/chromedriver_linux64.zip
+  - unzip chromedriver_linux64.zip -d /home/travis/virtualenv/python2.7.9/
+  - export CHROME_BIN=chromium-browser
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3  
+  
 script: mvn test
