--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 sudo: required
 
+services:
+  - xvfb
+  
 addons:
   apt:
     sources:
@@ -19,7 +22,6 @@ before_script:
   - unzip chromedriver_linux64.zip -d /home/travis/virtualenv/python2.7.9/
   - export CHROME_BIN=chromium-browser
   - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
   - sleep 3  
   
 script: mvn test
