--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,24 @@
 sudo: required
+dist: trusty
 
-services:
-  - xvfb
   
-addons:
+addons: # get google-chrome-stable
   apt:
-    sources:
-      - google-chrome
     packages:
       - google-chrome-stable
 
 language: java
  
-before_install:
- - sudo apt-get update
- - sudo apt-get install chromium-chromedriver
- 
- 
 before_script:
-  - wget http://chromedriver.storage.googleapis.com/2.6/chromedriver_linux64.zip
-  - unzip chromedriver_linux64.zip -d /home/travis/virtualenv/python2.7.9/
-  - export CHROME_BIN=chromium-browser
   - "export DISPLAY=:99.0"
-  - sleep 3  
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3
   
-script: mvn test
+  install: 
+  - wget -N https://chromedriver.storage.googleapis.com/2.43/chromedriver_linux64.zip -P ~/
+  - unzip ~/chromedriver_linux64.zip -d ~/
+  - rm ~/chromedriver_linux64.zip
+  - sudo mv -f ~/chromedriver /usr/local/bin/
+  - sudo chmod +x /usr/local/bin/chromedriver
+  
+script: mvn test    
