--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: java
  
   
 addons: # get google-chrome-stable
-  apt:
-    packages:
-      - google-chrome-stable
+  chrome: stable
 
 
 before_script:
