--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,15 @@ language: java
  
   
 addons: # get google-chrome-stable
-  chrome: stable
-
-  
-  install: 
-  - wget -N https://chromedriver.storage.googleapis.com/2.43/chromedriver_linux64.zip -P ~/
-  - unzip ~/chromedriver_linux64.zip -d ~/
-  - rm ~/chromedriver_linux64.zip
-  - sudo mv -f ~/chromedriver /usr/local/bin/
-  - sudo chmod +x /usr/local/bin/chromedriver
-  
-script: mvn test    
+    chrome: stable
+    
+    
+    install: 
+        - wget -N https://chromedriver.storage.googleapis.com/2.43/chromedriver_linux64.zip
+        - unzip chromedriver_linux64.zip -d /home/travis/virtualenv/python2.7.12/bin/
+        - rm ~/chromedriver_linux64.zip
+        
+    script: 
+        - whereis google-chrome-stable
+        - whereis chromedriver
+        -mvn test    
