--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: java
 addons:
  chrome: stable
 
-echo $PATH
 before_script:
 
  - wget http://chromedriver.storage.googleapis.com/2.8/chromedriver_linux64.zip
+ - mkdir /home/travis/virtualenv/python2.7.12/bin
  - unzip chromedriver_linux64.zip -d /home/travis/virtualenv/python2.7.12/bin/
  - export CHROME_BIN=chromium-browser 
  
