--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,8 @@ addons:
  chrome: stable
 
 before_script:
-
- - wget http://chromedriver.storage.googleapis.com/2.8/chromedriver_linux64.zip
- - mkdir /home/travis/virtualenv/python2.7.12/bin
- - unzip chromedriver_linux64.zip -d /home/travis/virtualenv/python2.7.12/bin/
- - export CHROME_BIN=chromium-browser 
+ - PWD
+ 
  
 script:
 
