changed yml and created settings file8

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,10 @@
-sudo: required
-
 language: java
 
 addons:
  chrome: stable
-  
-echo: $PATH
  
 before_script:
- - pwd
- 
+ - echo $PATH
  
 script:
 
