--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,14 @@ language: java
 addons:
  chrome: stable
  
-before_script:
- - cd $HOME
- - wget http://chromedriver.storage.googleapis.com/2.8/chromedriver_linux64.zip
- - mkdir /home/travis/virtualenv/python2.7.12/bin
- - unzip chromedriver_linux64.zip -d /home/travis/virtualenv/python2.7.12/bin/
- - export CHROME_BIN=chromium-browser
+before_install:
+ - wget http://chromedriver.storage.googleapis.com/2.40/chromedriver_linux64.zip -P ~/
+ - unzip ~/chromedriver_linux64.zip -d ~/
+ - rm ~/chromedriver_linux64.zip
+ - sudo mv -f ~/chromedriver /usr/local/share/
+ - sudo chmod +x /usr/local/share/chromedriver
+ - sudo ln -s /usr/local/share/chromedriver 
+ - sleep 3
  
 script:
 
