--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ before_install:
  - rm ~/chromedriver_linux64.zip
  - sudo mv -f ~/chromedriver /usr/local/share/
  - sudo chmod +x /usr/local/share/chromedriver
- - sudo ln -s /usr/local/share/chromedriver 
+ - sudo ln -s /usr/local/share/chromedriver /usr/local/bin/chromedriver
+ - sudo ln -s /usr/local/share/chromedriver /usr/bin/chromedriver
  - sleep 3
  
 script:
