--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: java
+dist: trusty
 
 addons:
  chrome: stable
@@ -12,6 +13,7 @@ before_install:
  - sudo ln -s /usr/local/share/chromedriver /usr/local/bin/chromedriver
  - sudo ln -s /usr/local/share/chromedriver /usr/bin/chromedriver
  - sleep 3
+ - google-chrome-stable --headless --remote-debugging-port=9222 http://localhost
  
 script:
 
