--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
  - sudo ln -s /usr/local/share/chromedriver /usr/local/bin/chromedriver
  - sudo ln -s /usr/local/share/chromedriver /usr/bin/chromedriver
  - sleep 3
- - google-chrome-stable --headless --remote-debugging-port=9222 http://localhost
+ - google-chrome-stable --headless --remote-debugging-port=9222 http://localhost &
  
 script:
 
