script utility updated11

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,13 @@ before_install:
 
 script:
  - mvn test
+ 
+after_success:
+  # Generate coverage report in xml format
+ - coverage xml
+
+  # Install deepsource CLI
+ - curl https://deepsource.io/cli | sh
+
+  # Report coverage artifact to 'test-coverage' analyzer
+ - ./bin/deepsource report --analyzer test-coverage --key python --value-file ./coverage.xml
