script utility updated13

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,10 @@ script:
 after_success:
  
   # Generate coverage report in xml format
- - coverage xml --verbose
+ - coverage xml
 
   # Install deepsource CLI
  - rtn=$(curl https://deepsource.io/cli | sh) 
-
+ - echo $rtn
   # Report coverage artifact to 'test-coverage' analyzer
- - ./bin/deepsource report --analyzer test-coverage --key python --value-file ./coverage.xml --verbose
+ - ./bin/deepsource report --analyzer test-coverage --key python --value-file ./coverage.xml
