--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ addons:
       - iproute2
  
 before_install:
+
+ - export TZ=Etc/UTC
  - wget http://chromedriver.storage.googleapis.com/79.0.3945.36/chromedriver_linux64.zip -P ~/
  - unzip ~/chromedriver_linux64.zip -d ~/
  - rm ~/chromedriver_linux64.zip
