--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
  
 before_install:
 
- - export TZ=Etc/UTC
+ - export TZ=IST
  - wget http://chromedriver.storage.googleapis.com/79.0.3945.36/chromedriver_linux64.zip -P ~/
  - unzip ~/chromedriver_linux64.zip -d ~/
  - rm ~/chromedriver_linux64.zip
