--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,13 @@
 <version>3.12.0</version>
 </dependency> 
 
-
+   <!-- https://mvnrepository.com/artifact/com.twilio.sdk/twilio -->
+<dependency>
+    <groupId>com.twilio.sdk</groupId>
+    <artifactId>twilio</artifactId>
+    <version>7.47.1</version>
+    
+</dependency>
 
   </dependencies>
   
